# rust-htmx-diesel-exploration

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
migrations/2023-12-25-091738_create_users_table/: up.sql
migrations/2023-12-25-153259_create_sessions_table/: up.sql
src/: main.rs  shutdown.rs
src/controllers/: auth_controller.rs  home_controller.rs  html_response.rs  mod.rs  service_controller.rs
src/db/: schema.rs
src/models/: user.rs
src/repositories/: auth_backend.rs  mod.rs  postgres_store.rs  session_repository.rs  user_repository.rs
src/templates/: home_template.rs  mod.rs
templates/: base.html  feed.html  home.html  login.html  register.html  todos.html
