[package]
name = "informator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
askama = "0.12.1"
dotenv = "0.15.0"
log = "0.4.20"
env_logger = "0.10.1"
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "uuid"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
axum-login = "0.11.0"
tower-sessions = "0.8.2"
time = "0.3.31"
async-trait = "0.1.75"
